--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3",
+    "socket.io-client": "^4.7.2",
     "sweetalert2": "^11.7.27"
   },
   "devDependencies": {
