--- a/client/package.json
+++ b/client/package.json
@@ -10,21 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fullcalendar/core": "^6.1.8",
     "@fullcalendar/daygrid": "^6.1.8",
     "@fullcalendar/interaction": "^6.1.8",
     "@fullcalendar/react": "^6.1.8",
+    "@mapbox/search-js-react": "^1.0.0-beta.17",
+    "@mui/icons-material": "^5.14.11",
+    "@mui/material": "^5.14.11",
     "@react-oauth/google": "^0.11.1",
     "@stripe/stripe-js": "^2.1.5",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "jwt-decode": "^3.1.2",
+    "mapbox-gl": "^2.15.0",
     "rc-slider": "^10.2.1",
     "rc-tooltip": "^6.0.1",
     "react": "^18.2.0",
     "react-calendar": "^4.6.0",
     "react-dom": "^18.2.0",
+    "react-map-gl": "^7.1.6",
     "react-modal": "^3.16.1",
     "react-responsive": "^9.0.2",
     "react-responsive-modal": "^6.4.2",
