--- a/api/package.json
+++ b/api/package.json
@@ -8,6 +8,7 @@
     "express-async-handler": "^1.2.0",
     "image-downloader": "^4.3.0",
     "jsonwebtoken": "^9.0.1",
+    "moment": "^2.29.4",
     "mongoose": "^7.4.4",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
